<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4">

    <ImageView
        android:id="@+id/aspire_activity_main4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="69.84dp"
        android:background="@drawable/aspire_activity_main_4"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16.38dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="74.38dp"
        android:layout_marginBottom="131dp"
        android:contentDescription="@string/arrow2"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="191dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="653dp"
        android:textStyle="bold"
        android:textColor="@color/text1"
        android:textSize="20sp"
        android:contentDescription="@string/text5"
        android:text="@string/text5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="118dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="535dp"
        android:background="@drawable/login"
        android:ems="21"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/editTextTextPersonName"
        android:letterSpacing="0.05"
        android:paddingStart="34dp"
        android:paddingTop="19dp"
        android:paddingEnd="34dp"
        android:paddingBottom="20dp"
        android:text="@string/EditText1"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="60dp"
        android:background="#FAFAFA"
        android:contentDescription="@string/text5"
        android:paddingStart="6dp"
        android:paddingEnd="6dp"
        android:text="@string/text6"
        android:textColor="@color/text2"
        android:textSize="10sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="455dp"
        android:background="@drawable/password"
        android:ems="21"
        android:hint="Пароль"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:letterSpacing="0.05"
        android:paddingStart="34dp"
        android:paddingTop="19dp"
        android:paddingEnd="34dp"
        android:paddingBottom="20dp"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <ImageView
        android:id="@+id/eye_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22.04dp"
        android:layout_marginStart="288.04dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="22.04dp"
        android:contentDescription="@string/eye_icon"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
        app:srcCompat="@drawable/eye_icon" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginStart="261dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="413dp"
        android:textSize="12sp"
        android:textStyle="normal"
        android:textColor="@color/text1"
        android:text="@string/text7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="83dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="329dp"
        android:background="@drawable/button_rounded2"
        android:paddingStart="100dp"
        android:paddingTop="19dp"
        android:paddingEnd="100dp"
        android:paddingBottom="20dp"
        android:contentDescription="@string/button6"
        android:text="@string/button6"
        android:textAllCaps="false"
        android:textColor="@color/button4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="228dp"
        android:layout_marginBottom="243dp"
        android:text="@string/text8"
        android:textColor="@color/text2"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageButton
        android:id="@+id/image_button_telegram"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="296dp"
        android:layout_marginBottom="181dp"
        android:background="@drawable/network_rounded"
        android:paddingStart="37dp"
        android:paddingTop="19dp"
        android:paddingEnd="36dp"
        android:paddingBottom="18dp"
        android:src="@drawable/telegram"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/image_button_viber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="181dp"
        android:background="@drawable/network_rounded"
        android:paddingStart="38dp"
        android:paddingTop="16dp"
        android:paddingEnd="37dp"
        android:paddingBottom="16.7dp"
        android:src="@drawable/viber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/image_button_google"
        app:layout_constraintStart_toEndOf="@+id/image_button_telegram"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <ImageButton
        android:id="@+id/image_button_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="259dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="181dp"
        android:background="@drawable/network_rounded"
        android:paddingStart="39dp"
        android:paddingTop="19dp"
        android:paddingEnd="38dp"
        android:paddingBottom="18dp"
        android:src="@drawable/google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="102dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="103dp"
        android:layout_marginBottom="48dp"
        android:text="@string/text9"
        android:textColor="@color/text2"
        android:textSize="13sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_button_viber" />


</androidx.constraintlayout.widget.ConstraintLayout>